tests/files/success/fib.boat
def f(n):
    if n < 2:
        n
    else:
        f(n - 1) + f(n - 2)
    end
end

f(15)