tests/files/error/func_call_too_many_args.boat
def f(a,b):
    a
end

f(1,2,3)